[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/adaptive-audio/AudioTrackUI/BaseTrackUI/BaseTrackUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/adaptive-audio/AudioTrackUI/AudioTrackUI.gd" type="Script" id=3]

[node name="AudioTrackUI" type="VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 138.0

[node name="BaseTrackUI" parent="Content" instance=ExtResource( 1 )]
margin_right = 118.0
margin_bottom = 138.0

[node name="Layers" type="ScrollContainer" parent="Content"]
margin_left = 122.0
margin_right = 945.0
margin_bottom = 138.0
size_flags_horizontal = 3
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Layers"]

[node name="AddLayer" type="Button" parent="Content"]
margin_left = 949.0
margin_right = 1024.0
margin_bottom = 138.0
text = "Add Layer"
